# cordatus-flash-utility

./: .gitignore  CLAUDE.md  PREMIUM_DESIGN_SPEC.md  README.md  flash_cordatus.sh  index.html  main.py  package-lock.json  package.json  requirements.txt  tailwind.config.js  wget-log
.claude/: settings.local.json
data/: template.csv  urls.sh
public/data/: template.csv
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  main.rs.backup
src/components/: Analytics.tsx  CommandPalette.tsx  ContainerBrowser.tsx  DeviceSelection.tsx  FlashingProgress.tsx  Models.tsx  Models_broken.tsx  SettingsPanel.tsx  SetupWizard.tsx
src/services/: deviceService.ts  tauriService.ts
src/types/: index.ts
src/utils/: csvParser.ts
